# demacia-rise-strategy-share

./: CHANGELOG.md  CHANGES_SUMMARY.md  Cargo.toml  QUICKSTART.md  VERIFICATION_REPORT.md  app.css  app.js  community-pointer.json  config.json  index.html  justfile  need.md  readme.md
doc/: CONFIGURATION_GUIDE.md  DATA_PERSISTENCE.md  DECENTRALIZED_SEARCH.md  FIX_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  PROJECT_COMPLETION.md  QUICK_REFERENCE.md  QUICK_START.md  REAL_CONNECTIVITY_PLAN.md  doubao.deepsearch.md  game.md  gameinfo.md
frontend/: community-index.js  community-strategy.js  config-ui.js  data.js  debug.js  enemy-lineup.js  enemy-search.js  index-sync-controller.js  ipfs-client.js  lineup-search-core.js  min-entry.js  p2p-sync.js  redis-write-guard.js  search-controller.js  state.js  strategy-schema.js  unit-tooltips.js  utils.js  view-renderers.js
scripts/: publish-pointer-to-redis.mjs
src/: app.rs  data_model.rs  engine.rs  github_sync.rs  lib.rs  main.rs  p2p.rs  score.rs  search.rs  storage.rs
test/: auto-write-guard.test.mjs  bootstrap-preflight.test.mjs  community-bootstrap-integration.test.mjs  community-index-init.test.mjs  community-index-sharing.test.mjs  community-index.test.mjs  community-pin-summary.test.mjs  community-publish-discovery.test.mjs  community-strategy-search.test.mjs  config-normalization.test.mjs  enemy-config-consistency.test.mjs  enemy-lineup-aliases.test.mjs  enemy-search-fallback.test.mjs  initial-bootstrap-network.test.mjs  network-config.test.mjs  p2p-local-state.test.mjs  (+8 more)
(+3 files in other folders)
