[package]
name = "League-of-Legends-demacia-rise-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo-storage = "0.3.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
indexed_db_futures = "0.6.4"
leptos = { version = "0.8.17", features = ["csr"] }
leptos_dom = "0.8"
leptos_meta = "0.8"
leptos_router = "0.8"
reqwest-wasm = "0.11.16"
serde = "1.0.228"
serde_json = "1.0.149"
serde-wasm-bindgen = "0.6" 
uuid = { version = "1.22.0", features = ["v4", "js"] }
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
web-sys = "0.3.91"
console_log = "1.0"
js-sys = "0.3"
log = "0.4" 

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true

[lints.rust]
uncommon_codepoints = "allow"